# objectbox-azure-sphere

./: .gitignore  LICENSE.txt  README.md  download.bat  download.sh  objectbox-azure-sphere.sln
MT3620_Grove_Shield_Library/: MT3620_Grove_Shield_Library.vcxproj.filters
azure-sphere-compression-demo/: CompressionDemoEntity_builder.h  CompressionDemoEntity_reader.h  app_manifest.json  applibs_versions.h  azure-sphere-compression-demo.vcxproj  azure-sphere-compression-demo.vcxproj.filters  main.c
azure-sphere-sensor-demo/: SensorDemoEntity_builder.h  SensorDemoEntity_reader.h  app_manifest.json  azure-sphere-sensor-demo.vcxproj  azure-sphere-sensor-demo.vcxproj.filters  main.c  mt3620_rdb.h
azure-sphere-test/: TestEntity_builder.h  TestEntity_reader.h  app_manifest.json  applibs_versions.h  azure-sphere-test.vcxproj  azure-sphere-test.vcxproj.filters  main.c  mt3620_rdb.h
fake-cmake/: CMakeLists.txt
flatcc/: flatcc.vcxproj.filters
misc/: CompressionDemoEntity.fbs  SensorDemoEntity.fbs  TestEntity.fbs
misc/demo-db-creator/: Makefile
misc/demo-db-creator/dbs/: README.md
misc/memory-usage/: azure-sphere-compression-demo  azure-sphere-compression-demo-peak  azure-sphere-sensor-demo
misc/sensor-demo-db/: data.mdb  lock.mdb
objectbox-client-azure-sphere/: error_manager.c  error_manager.h  objectbox-client-azure-sphere.vcxproj  objectbox-client-azure-sphere.vcxproj.filters  store.c  utilities.c  utilities.h
rest-client/: data_operations.c  http_utils.c  http_utils.h  obtypes.h  rest-client.vcxproj
zstd/: zstd.vcxproj  zstd.vcxproj.filters
(+10 files in other folders)
